chore: initial commit

--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,9 +1,9 @@
 # compiled output
-/back/dist
-/back/node_modules
+/dist
+/node_modules
 
 # Logs
-/back/logs
+logs
 *.log
 npm-debug.log*
 pnpm-debug.log*
@@ -33,5 +33,3 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-.devcontainer/postgres-data
