--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: dev
           POSTGRES_USER: dev
-          POSTGRES_DB: test
+          POSTGRES_DB: dev
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
