--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -35,8 +35,16 @@ jobs:
         working-directory: ./back
         run: |
               npm ci
-      - name: Install Dependencies
+      - name: Migrate
         working-directory: ./back
         run: |
               npm run migrate
+      - name: Lint
+        working-directory: ./back
+        run: |
+              npm run lint
+      - name: Test
+        working-directory: ./back
+        run: |
+              npm run test
       
