--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -47,4 +47,8 @@ jobs:
         working-directory: ./back
         run: |
               npm run test
+      - name: Test e2e
+        working-directory: ./back
+        run: |
+              npm run test:e2e
       
