--- a/back/package.json
+++ b/back/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./src/tests/jest-e2e.json",
+    "test:e2e": "npm run test -- --config ./src/tests/jest-e2e.json",
     "migrate": "npx typeorm-ts-node-commonjs --dataSource src/Database/typeorm.config.ts migration:run",
     "migrate:create": "npx typeorm-ts-node-commonjs migration:create",
     "migrate:test": "NODE_OPTIONS=\"-r dotenv/config\" DOTENV_CONFIG_PATH=.env.test npm run migrate"
