--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Install Node.js, NPM and Yarn
+      - name: Install Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 16
@@ -39,7 +39,7 @@ jobs:
       - name: Cache NPM dependencies
         uses: actions/cache@v3
         with:
-          path: ./back
+          path: ./back/node_modules
           key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-npm-cache-
@@ -50,9 +50,11 @@ jobs:
     # Docker Hub image that `container-job` executes in
     container: node:18
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
-          path: ./back
+          path: ./back/node_modules
           key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
       - name: Lint
         working-directory: ./back
@@ -83,9 +85,11 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
-          path: ./back
+          path: ./back/node_modules
           key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
       - name: Migrate
         working-directory: ./back
@@ -124,9 +128,11 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
-          path: ./back
+          path: ./back/node_modules
           key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
       - name: Migrate
         working-directory: ./back
