--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build app
 run-name: Build app
-on: [pull_request]
+on: 
+  pull_request:
+    paths:
+      - 'back/**'
 jobs:
   build:
     name: build
