--- a/back/.env
+++ b/back/.env
@@ -5,4 +5,8 @@ DATABASE_USERNAME=dev
 DATABASE_PASSWORD=dev
 DATABASE_NAME=dev
 SECRET=test
-SYNCRONIZED=false
+SYNCRONIZED=true
+MAIL_SMTP=smtp.ethereal.email
+MAIL_USER=hope.ziemann@ethereal.email
+MAIL_PASSWORD=hDxj1SHuEcEzs8UxTy
+APP_FRONT_URL=http://localhost:3000/
