--- a/back/package.json
+++ b/back/package.json
@@ -18,12 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "npm run test -- --config ./src/tests/jest-e2e.json",
-    "migrate": "npx typeorm-ts-node-commonjs --dataSource src/Database/typeorm.config.ts migration:run",
+    "migrate": "npx typeorm-ts-node-commonjs --dataSource src/database/typeorm.config.ts migration:run",
     "migrate:create": "npx typeorm-ts-node-commonjs migration:create",
     "migrate:test": "NODE_OPTIONS=\"-r dotenv/config\" DOTENV_CONFIG_PATH=.env.test npm run migrate"
-    
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -34,14 +34,18 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -49,8 +53,11 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
@@ -58,10 +65,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
-    "@types/lodash": "^4.14.199",
-    
     "pg-mem": "^2.7.1",
     "prettier": "^3.0.0",
+    "sass": "^1.69.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
