--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "proxy": "lcp --proxyUrl http://localhost:3000/api --proxyPartial api",
+    "dev": "npm run proxy & vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test": "vitest run",
@@ -13,25 +14,39 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.22.15",
+    "axios": "^1.5.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuetify": "^3.3.22"
+    "vuetify": "^3.3.22",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.3.67",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
-    "@types/node": "^18.17.17",
+    "@types/node": "^18.18.6",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.49.0",
+    "eslint": "^8.51.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "local-cors-proxy": "^1.1.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
     "vitest": "^0.34.4",
