--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -10,6 +10,9 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "allowJs": true,
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
