--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -18,6 +18,7 @@
         "import/prefer-default-export": "off",
         "import/extensions": "off",
         "max-len": "off",
+        "class-methods-use-this": "off",
         "no-param-reassign": [
             "error",
             {
