--- a/back/.env
+++ b/back/.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD=dev
 DATABASE_NAME=dev
 SECRET=test
 SYNCRONIZED=true
+LOGGING=true
 MAIL_SMTP=smtp.ethereal.email
 MAIL_USER=hope.ziemann@ethereal.email
 MAIL_PASSWORD=hDxj1SHuEcEzs8UxTy
