--- a/back/package.json
+++ b/back/package.json
@@ -45,7 +45,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
