--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -14,6 +14,13 @@
         "plugin:vue/recommended"
     ],
     "rules": {
+        "vue/html-self-closing": ["error", {
+            "html": {
+              "void": "always",
+              "normal": "always",
+              "component": "always"
+            }
+        }],
         "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
         "import/prefer-default-export": "off",
         "import/extensions": "off",
@@ -27,7 +34,7 @@
                 "state"
               ]
             }
-        ]
+        ],
     },
     "settings": {
         "import/resolver": {
