--- a/front/package.json
+++ b/front/package.json
@@ -28,7 +28,8 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
-    "@types/node": "^18.18.6",
+    "@types/node": "^18.19.3",
+    "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-vue": "^4.3.4",
