--- a/back/package.json
+++ b/back/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "google-auth-library": "^9.15.1",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
