--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "eslint-import-resolver-typescript": "^4.3.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-google-login": "^2.0.33",
     "vuetify": "^3.8.1",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
@@ -32,6 +33,7 @@
     "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "@typescript-eslint/parser": "^8.29.1",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
@@ -47,7 +49,6 @@
     "sass": "^1.86.3",
     "typescript": "~5.8.3",
     "vite": "^6.2.6",
-    "@vitejs/plugin-vue": "^5.2.3",
     "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8"
   }
