--- a/back/package.json
+++ b/back/package.json
@@ -46,8 +46,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.22",
-    "uuid": "^11.1.0",
-    "vuex-persistedstate": "^4.1.0"
+    "typescript-eslint": "^8.30.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.6",
